--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
-    "expo": "~51.0.8",
+    "axios": "^1.7.2",
+    "expo": "^51.0.10",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "feather-icons": "^4.29.2",
     "geolib": "^3.3.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-web": "~0.19.10",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
